[gd_scene load_steps=23 format=2]

[ext_resource path="res://Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Editor/Editor.gd" type="Script" id=2]
[ext_resource path="res://Images/CheckBox/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://Images/CheckBox/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://Images/Icons1/sprite_1.png" type="Texture" id=5]
[ext_resource path="res://Images/Icons1/sprite_0.png" type="Texture" id=6]
[ext_resource path="res://Images/Icons1/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://Images/Icons1/sprite_4.png" type="Texture" id=8]
[ext_resource path="res://Images/Icons1/sprite_5.png" type="Texture" id=9]
[ext_resource path="res://Images/Icons1/sprite_3.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0196078, 0.0431373, 0.0705882, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0196078, 0.0431373, 0.0705882, 1 )
border_width_left = 4
border_color = Color( 0.0196078, 0.0431373, 0.0705882, 1 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0862745, 0.129412, 0.176471, 1 )

[node name="Editor" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -320.0
margin_top = -268.0
margin_right = 512.0
margin_bottom = 300.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
bookmark_gutter = true
breakpoint_gutter = true
fold_gutter = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -380.0
margin_top = 280.0
margin_right = -156.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 3 )
text = "ctrl+s to save"

[node name="Control" type="Control" parent="."]
margin_left = -512.0
margin_top = -300.0
margin_right = -320.0
margin_bottom = 300.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
color = Color( 0.14902, 0.184314, 0.227451, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 596.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
margin_right = 192.0
margin_bottom = 86.0
rect_min_size = Vector2( 192, 74 )

[node name="NormalButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 8.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Normal"

[node name="DiscoButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 192.0
margin_bottom = 20.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Disco"

[node name="UnderwaterButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 192.0
margin_bottom = 32.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Underwater"

[node name="BubblegumButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 192.0
margin_bottom = 44.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Bubblegum"

[node name="WinterButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 192.0
margin_bottom = 56.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Winter"

[node name="BrainButton" type="Button" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 192.0
margin_bottom = 68.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Brain"

[node name="ColorRect" type="ColorRect" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 192.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 2 )

[node name="OR" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 192.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 6 )
text = "Overrides:"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -284.0
margin_right = 512.0
margin_bottom = -266.0
color = Color( 0.14902, 0.184314, 0.227451, 1 )

[node name="FileName" type="Label" parent="."]
margin_left = -318.0
margin_top = -280.0
margin_right = 224.0
margin_bottom = -268.0
custom_fonts/font = SubResource( 6 )

[node name="Bar" type="Control" parent="."]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = -284.0

[node name="ColorRect" type="ColorRect" parent="Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.113725, 0.141176, 1 )

[node name="SaveButton" type="Button" parent="Bar"]
margin_top = 2.0
margin_right = 56.0
margin_bottom = 12.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "save"

[node name="DocsButton" type="Button" parent="Bar"]
margin_left = 56.0
margin_top = 2.0
margin_right = 112.0
margin_bottom = 12.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "docs"

[node name="ColorButton" type="Button" parent="Bar"]
margin_left = 112.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 12.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "color"

[node name="DeleteOverride" type="TextureButton" parent="Bar"]
margin_left = 990.0
margin_right = 1024.0
margin_bottom = 34.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 7 )
expand = true

[node name="NewOverride" type="TextureButton" parent="Bar"]
margin_left = 956.0
margin_right = 990.0
margin_bottom = 34.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="NewOverride" type="Control" parent="."]
visible = false
margin_left = -112.0
margin_top = -46.0
margin_right = 112.0
margin_bottom = 46.0

[node name="ColorRect2" type="ColorRect" parent="NewOverride"]
margin_left = -400.0
margin_top = -254.0
margin_right = 624.0
margin_bottom = 346.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="NewOverride"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.184314, 0.227451, 1 )

[node name="OverrideName" type="LineEdit" parent="NewOverride"]
margin_left = 6.0
margin_top = 18.0
margin_right = 184.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
placeholder_text = "Level Name"

[node name="InvLabel" type="Label" parent="NewOverride"]
visible = false
margin_left = 182.0
margin_top = 18.0
margin_right = 222.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 8 )
text = "-inv"
align = 1
valign = 1

[node name="NewOverride" type="Label" parent="NewOverride"]
margin_left = 36.0
margin_right = 188.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "New Override"
align = 1
valign = 1

[node name="UnderwaterCheckBox" type="CheckBox" parent="NewOverride"]
margin_left = -4.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_icons/checked = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 4 )
text = "Inverted"

[node name="CreateButton" type="Button" parent="NewOverride"]
margin_left = 16.0
margin_top = 78.0
margin_right = 96.0
margin_bottom = 86.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
disabled = true
text = "Create"

[node name="CancelButton" type="Button" parent="NewOverride"]
margin_left = 128.0
margin_top = 78.0
margin_right = 208.0
margin_bottom = 86.0
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Cancel"

[node name="Docs" type="Control" parent="."]
visible = false
margin_left = -288.0
margin_top = -204.0
margin_right = 289.0
margin_bottom = 204.0

[node name="ColorRect2" type="ColorRect" parent="Docs"]
margin_left = -224.0
margin_top = -96.0
margin_right = 800.0
margin_bottom = 504.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="Docs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 20.0
color = Color( 0.14902, 0.184314, 0.227451, 1 )

[node name="TextEdit" type="TextEdit" parent="Docs"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/read_only = SubResource( 12 )
custom_styles/normal = SubResource( 2 )
text = "Docs

6 Base files:
	
	Normal: Chapter A.
	Disco: Chapter B.
	Underwater: Chapter C.
	Bubblegum: Chapter D.
	Winter: The 2 winter levels in chapter E.
	Brain: Inside Squid's brain.


--------------------

Color values:

	Color vales change the base color of
	certain things. And take a RGB or HSV value.

Examples:

	Background
	RGB: 23, 0, 15

	AI A
	HSV: 225, 200, 200

	Using HSV instead of RGB is optional.

	Sometimes, two things use the same color
	value. For example, Shelly's glow and the
	LVL bar in the smiley minigame, both use
	the 'Snail Glow' value.

List of all color values:

	Background
	Background Pattern
	Background In Darkness
	Background Pattern In Darkness
	Wall A
	Wall B
	Wall A Dark
	Wall B Dark
	Wall Outline A
	Wall Outline B
	AI A
	AI B
	Snail Theme, Snail Glow
	Player Spotlight
	Player Spotlight Dark
	Snail Death
	Snail Trail
	Enemies
	Enemy Warnings
	Snail Outline
	Snail Body
	Snail Shell
	Snail Eye
	Dallin
	Dialog Files
	Overlay Gradient Color Top
	Overlay Gradient Color Bot
	Overlay Vignette Color
	Bloom Color
	Lvl Locked Front
	Lvl Locked Back
	Lvl Normal Front
	Lvl Normal Back
	Lvl Story Front
	Lvl Story Back
	Lvl Secret Front
	Lvl Secret Back
	Lvl Questionmark Indicator
	Lvl Questionmark Indicator Selected
	Bubbles
	Underw Currents
	Snail Flare
	AI In Background
	Light Ocean
	Conveyor Belts
	Final Boss 1A
	Final Boss 1B
	Final Boss 2
	Final Boss 3
	TD Turret 1
	TD Turret 2
	TD Turret 3
	Exploration Points
	Corrupted Antenna
	Dialog File Overlay
	Doors
	Unicorn
	Smiley 1
	Smiley 2

--------------------

Number Values:

	Number values take a floating point number
	or a whole number.
	(floating point means Number with decimals)
	
	They can sometimes be used as a boolean.
	(A boolean is like a switch.
	1 means on, 0 means off.)

Examples:
	
	Background Scale Min
	50
	
	Background Parallax Min
	0.25
	
	Minimalist Color Mode
	1

List of Number Values:

	Background Scale Min
	Background Scale Max
	Background Style (whole numbers from 1 to 19 inclusively)
	Background Parallax Min
	Background Parallax Max
	Background Scroll Speed, Background Scroll Speed Max
	Background Scroll Speed Min
	Wall Brightness When Lights Are Out
	Disco Light Hue Offset
	Disco Light Hue Spread
	Disco Light Saturation
	Disco Light Alpha
	Dialog File Overlay Alpha
	Color Rotation Allowed (Boolean, only applies to disco chapter)
	Minimalist Color Mode (Boolean, changes which colors are used for certain objects)
	Hue Shift All Colors (fun for quick experiments)
	Overlay Vignette Alpha
	Overlay Vignette Size
	Bloom Alpha

--------------------

Vector Values:
	A vector value, takes three numbers

Example:

	Post Processing Contrast
	2
	2
	2
	
	Post Processing Contrast Offset
	0.4
	0.4
	0.4

List of vector values:

	Post Processing Contrast
	Post Processing Contrast Offset


--------------------
--------------------

Overrides:

	Sometimes, you want a specific level to have a different
	color.
	For this, you can use overrides.
	An override is a file that is put in the 'Overrides' folder
	in your color scheme.
	This editor, takes care of putting them in the folder for you.

Creating a new override:
	Please read to the end before creating an override.
	
	You can create a new override by hitting the '+' button at
	the top right corner, or by pressing CTRL + N.

Naming the override:

	Naming them is pretty straight forward.
	For an override to affect a level when the water pump
	isn't broken, you have to name the override after the level.
	For example, I want the override to affect level A01,
	so I name the override \"A01\".
	
	But, when the water pump is broken, The water is 'inverted'.
	If we want the override to affect the level when the water
	is inverted, we have to put \"-inv\" at the end of the name.
	In the editor, check the \"Inverted\" box when creating
	the override.

Deleting an override:

	To delete an override, select it, And then hit the 'trash'
	icon at the top right corner.


List of the names for levels that don' appear in the level selection:

	main_menu_dark (the save slot selection)
	menu (the pause menu)
	level_select
	story_library (dialog spring library)
	AngerManagementRoom (smiley minigame)
	end_of_game_story_file

--------------------

Tips:
Make sure to take backups!
When updating WYS, there is a chance that steam will
erase or overwrite your color schemes.


"
readonly = true
syntax_highlighting = true
bookmark_gutter = true
breakpoint_gutter = true
fold_gutter = true

[node name="CloseButton" type="Button" parent="Docs"]
margin_left = 260.0
margin_top = 412.0
margin_right = 316.0
margin_bottom = 422.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Close"

[node name="ColorPicker" type="Control" parent="."]
visible = false
margin_left = -160.0
margin_top = -238.0
margin_right = 160.0
margin_bottom = 238.0

[node name="ColorRect" type="ColorRect" parent="ColorPicker"]
margin_left = -352.0
margin_top = -62.0
margin_right = 672.0
margin_bottom = 538.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="ColorPicker"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -18.0
margin_right = -2.0
margin_bottom = -6.0
color = Color( 0.14902, 0.184314, 0.227451, 1 )

[node name="ColorPicker" type="ColorPicker" parent="ColorPicker"]
margin_left = 4.0
margin_top = -16.0
margin_right = 312.0
margin_bottom = 446.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="ColorPickerCloseButton" type="Button" parent="ColorPicker"]
margin_left = 248.0
margin_top = 454.0
margin_right = 304.0
margin_bottom = 464.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Close"

[node name="CopyRGB" type="Button" parent="ColorPicker"]
margin_left = 128.0
margin_top = 454.0
margin_right = 192.0
margin_bottom = 464.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Copy RGB"

[node name="CopyHSV" type="Button" parent="ColorPicker"]
margin_left = 16.0
margin_top = 454.0
margin_right = 80.0
margin_bottom = 464.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_focus = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.94902, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Copy HSV"

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/DiscoButton" to="." method="_on_DiscoButton_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/UnderwaterButton" to="." method="_on_UnderwaterButton_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/BubblegumButton" to="." method="_on_BubblegumButton_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/WinterButton" to="." method="_on_WinterButton_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/VBoxContainer/BrainButton" to="." method="_on_BrainButton_pressed"]
[connection signal="pressed" from="Bar/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Bar/DocsButton" to="." method="_on_DocsButton_pressed"]
[connection signal="pressed" from="Bar/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="pressed" from="Bar/DeleteOverride" to="." method="_on_DeleteOverride_pressed"]
[connection signal="pressed" from="Bar/NewOverride" to="." method="_on_NewOverride_pressed"]
[connection signal="text_changed" from="NewOverride/OverrideName" to="." method="_on_OverrideName_text_changed"]
[connection signal="toggled" from="NewOverride/UnderwaterCheckBox" to="." method="_on_UnderwaterCheckBox_toggled"]
[connection signal="pressed" from="NewOverride/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="NewOverride/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Docs/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ColorPicker/ColorPickerCloseButton" to="." method="_on_ColorPickerCloseButton_pressed"]
[connection signal="pressed" from="ColorPicker/CopyRGB" to="." method="_on_CopyRGB_pressed"]
[connection signal="pressed" from="ColorPicker/CopyHSV" to="." method="_on_CopyHSV_pressed"]
